resolves #46 bot configuration edition in admin interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -22,7 +22,7 @@
     <p></p>
     <md-list>
       <md-list-item>
-        <a routerLink="/applications">Applications</a>
+        <a routerLink="/configuration/nlp">Configuration</a>
       </md-list-item>
       <md-list-item>
         <a routerLink="/nlp/inbox">NLP</a>
