--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -14,11 +14,9 @@
   ~ limitations under the License.
   -->
 <md-card>
-  <md-card-header>
-    <md-card-title>
-      <h2>Talk to the bot</h2>
-    </md-card-title>
-  </md-card-header>
+  <md-card-title>
+    Talk to the bot
+  </md-card-title>
   <md-card-content>
     <br>
     <div>
