admin interface : add refresh button for bot configuration
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -16,11 +16,11 @@
 
 <md-card>
   <md-card-title>
-    Bot Configurations
+    Bot Configurations  <button md-button (click)="refresh()" md-tooltip="Refresh"><md-icon>refresh</md-icon></button>
   </md-card-title>
   <md-card-subtitle>
     <button md-button (click)="prepareCreate()" color="primary">
-      <md-icon>create</md-icon>
+      <md-icon>add_box</md-icon>
       Create a new Configuration
     </button>
   </md-card-subtitle>
