--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -22,7 +22,7 @@
   <md-card-title>Test Plans</md-card-title>
   <md-card-subtitle>
     <button md-button (click)="prepareCreateTestPlan()" color="primary">
-      <md-icon>create</md-icon>
+      <md-icon>add_box</md-icon>
       Create a new Test Plan
     </button>
   </md-card-subtitle>
