--- a/bot/admin/web/src/app/shared/bot-message/sentence-element.component.html
+++ b/bot/admin/web/src/app/shared/bot-message/sentence-element.component.html
@@ -12,12 +12,12 @@
     </tr>
     <tr *ngFor="let entry of element.texts | mapToIterable">
       <td>
-        ({{entry.value}}) <span class="text-category">({{entry.key}})</span>
+        {{entry.value}} <span class="text-category">({{entry.key}})</span>
       </td>
     </tr>
     <tr *ngIf="element.choices.length !== 0">
       <td>
-        <tock-bot-message-choice *ngFor="let c of element.choices" [choice]="c" [user]="user"></tock-bot-message-choice>
+        <tock-bot-message-choice *ngFor="let c of element.choices" [choice]="c" [user]="user" (sendMessage)="reply($event)"></tock-bot-message-choice>
       </td>
     </tr>
   </table>
@@ -38,12 +38,12 @@
           </tr>
           <tr *ngFor="let entry of e.texts | mapToIterable">
             <td>
-              ({{entry.value}}) <span class="text-category">({{entry.key}})</span>
+              {{entry.value}} <span class="text-category">({{entry.key}})</span>
             </td>
           </tr>
           <tr *ngIf="e.choices.length !== 0">
             <td>
-              <tock-bot-message-choice *ngFor="let c of e.choices" [choice]="c" [user]="user"></tock-bot-message-choice>
+              <tock-bot-message-choice *ngFor="let c of e.choices" [choice]="c" [user]="user" (sendMessage)="reply($event)"></tock-bot-message-choice>
             </td>
           </tr>
         </table>
