--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -39,11 +39,11 @@
               &nbsp;
             </td>
             <td *ngIf="!m.bot" style="min-width: 200px">
-              {{m.text}}
+              <tock-bot-message [message]="m.message" (user)="true"></tock-bot-message>
             </td>
             <td style="width:30px"></td>
             <td *ngIf="m.bot">
-              <tock-bot-message [message]="m.message"></tock-bot-message>
+              <tock-bot-message [message]="m.message" (reply)="onNewMessage($event)"></tock-bot-message>
             </td>
           </tr>
           <tr *ngIf="loading">
