resolves #52 display intents and entities probability in nlp admin
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
@@ -25,10 +25,25 @@
 
 .sentence-analysis-content {
   padding-top: 15px;
+  overflow:auto;
 }
 .entity-list {
   width:40%;
   font-size: x-large;
   margin-left: auto;
   margin-right: auto;
+}
+
+.intent {
+  width:150px;
+}
+
+.probability {
+  font-style: italic;
+  font-size: smaller;
+  padding-left:10px;
+}
+
+.otherIntents {
+  float:right;
 }
