--- a/nlp/admin/web/src/app/try/try.component.html
+++ b/nlp/admin/web/src/app/try/try.component.html
@@ -23,5 +23,8 @@
   </md-card-content>
 </md-card>
 <br>
-<tock-sentence-analysis *ngIf="sentence" [(sentence)]="sentence" (closed)="onClose()"></tock-sentence-analysis>
+<tock-sentence-analysis *ngIf="sentence"
+                        [(sentence)]="sentence"
+                        (closed)="onClose()"
+                        [displayProbabilities]="true"></tock-sentence-analysis>
 
