--- a/nlp/admin/web/src/app/inbox/inbox.component.html
+++ b/nlp/admin/web/src/app/inbox/inbox.component.html
@@ -15,6 +15,6 @@
   -->
 
 <div class="inbox">
-  <tock-sentences-scroll [filter]="filter" title="Inbox"></tock-sentences-scroll>
+  <tock-sentences-scroll [filter]="filter" title="Inbox" [displayProbabilities]="true"></tock-sentences-scroll>
 </div>
 
