resolves #8 Allow to define intents answers with admin web interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -25,6 +25,9 @@
         <a routerLink="/configuration/nlp">Configuration</a>
       </md-list-item>
       <md-list-item>
+        <a routerLink="/bot/intent-search">Bot</a>
+      </md-list-item>
+      <md-list-item>
         <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
       <md-list-item>
