display registered bot intents
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -25,7 +25,7 @@
         <a routerLink="/configuration/nlp">Configuration</a>
       </md-list-item>
       <md-list-item>
-        <a routerLink="/bot/intent-search">Bot</a>
+        <a routerLink="/bot/intent-create">Bot</a>
       </md-list-item>
       <md-list-item>
         <a routerLink="/nlp/inbox">NLP</a>
