--- a/bot/admin/web/src/app/bot/intent/search-bot-intent.component.html
+++ b/bot/admin/web/src/app/bot/intent/search-bot-intent.component.html
@@ -14,4 +14,24 @@
   ~ limitations under the License.
   -->
 
-Please create an answer first
+<span *ngIf="intents">
+  <md-card class="intent" *ngFor="let intent of intents">
+  <md-card-content>
+    <h2>For
+      <span *ngIf="intent.firstSentences.length === 1">this sentence</span>
+      <span *ngIf="intent.firstSentences.length !== 1">these sentences</span>
+      :</h2>
+    <ul>
+      <li *ngFor="let s of intent.firstSentences">
+        {{s.text}}
+      </li>
+    </ul>
+    <h2>The reply is:</h2>
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{intent.storyDefinition.simpleAnswer().answers[0].text}}</h3>
+    <div class="intent-mention">(intent : {{intent.storyDefinition.intent.name}})</div>
+  </md-card-content>
+  <md-card-actions>
+    <button md-button (click)="delete(intent)" color="warn">Delete</button>
+  </md-card-actions>
+</md-card>
+</span>
