rename "bot" menu to "build"
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -25,10 +25,10 @@
         <a routerLink="/configuration/nlp">Configuration</a>
       </md-list-item>
       <md-list-item>
-        <a routerLink="/bot/intent-create">Bot</a>
+        <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
       <md-list-item>
-        <a routerLink="/nlp/inbox">NLP</a>
+        <a routerLink="/build/intent-create">Build</a>
       </md-list-item>
       <md-list-item>
         <a routerLink="/test/test">Test</a>
