--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -83,5 +83,9 @@
       <button md-raised-button color="warn" (click)="onDelete()">Delete</button>
       <button md-raised-button color="accent" (click)="onArchive()" *ngIf="displayArchiveButton">Archive</button>
       <button md-raised-button color="primary" (click)="onValidate()">Validate</button>
+      <button md-button *ngIf="config.displayDialogUrl"
+              color="primary"
+              (click)="displayDialogs()"
+              md-tooltip="Display conversations using this sentence">Conversations</button>
   </md-card-actions>
 </md-card>
