resolves #47 admin interface : add upload button in NLP application details
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
+++ b/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
@@ -19,7 +19,7 @@
   <md-card-content>
 
     <div *ngIf="!report">
-      <p>
+      <p *ngIf="!applicationName">
         <md-input-container id="applicationName">
           <input mdInput [(ngModel)]="configuration.newApplicationName" placeholder="Target Application Name">
         </md-input-container>
